<resources>
    <string name="app_name">Controller</string>
    <string name="temperature">Temperature</string>
    <string name="light">Light</string>
    <string name="humidity">Humidity</string>
    <string name="air_conditioning">AC Unit</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="air_conditioner_slow">Slow</string>
    <string name="air_conditioner_medium">Medium</string>
    <string name="air_conditioner_fast">Fast</string>
    <string name="settings">Settings</string>
    <string name="phone_number">Devise Simcard Number</string>
    <string name="phone_number_detail">The simcard number of the device which this app will communicate</string>
    <string name="via_sms">Via SMS</string>
    <string name="via_internet">Via Internet</string>
    <string name="sensors">Sensors</string>

    <string name="communi_type">Communication Type</string>
    <string name="communi_type_detail">The app should connect to devise using sms or via internet</string>

    <string name="settings_activity">Settings</string>

    <string name="submit">send</string>
    <string name="heater_is_on">Heater is On</string>
    <string name="heater_is_off">Heater is Off</string>
    <string name="changes">Applied Changes</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <string name="heaters_on_off_change" formatted="true" translatable="false">Heater %1$d status will be changed from %2$s to %3$s</string>
    <string name="heaters_value_change" formatted="true" translatable="false">Heater %1$d threshold will be changed from %2$d to %3$d</string>

    <string name="vapours_on_off_change" formatted="true" translatable="false">Vapour %1$d status will be changed from %2$s to %3$s</string>
    <string name="vapours_value_change" formatted="true" translatable="false">Vapour %1$d threshold will be changed from %2$d to %3$d</string>
    <string name="vapour_is_off">Vapour is Off</string>
    <string name="vapour_is_on">Vapour is on</string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="ac_is_on">Air Conditioner is On</string>
    <string name="ac_is_off">Air Conditioner is Off</string>
    <string name="ac_status_change" formatted="true" translatable="false">Air Conditioner status will be change from %1$s to %2$s</string>

    <string name="sensor_number">Sensor </string>
    <string name="heater">heater</string>
    <string name="vapour">vapour</string>
    <string name="password">Password</string>
    <string name="audible_phone_numbers">Permitted Phone Numbers</string>
    <string name="audible_phone_numbers_detail">These phone numbers can control the system remotely. Add each number in a separate line.</string>
    <string name="ok">Ok</string>
    <string name="changes_to_be">Changes that will be applied:</string>
    <string name="discard">Discard</string>
    <string name="power_is_off">Power is Off</string>
    <string name="title_activity_about_us">About Us</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="aboutus">About Us</string>
    <string name="controller">GreenHouse\nController</string>
    <string name="version">Version 0.1.0</string>
    <string name="device_phone_number">Device Phone Number</string>
    <string name="temperatureHistory">Sensors information in last 24 hours</string>


</resources>
